# redchat

./: package.json  pnpm-lock.yaml  svelte.config.js  types.d.ts
.github/workflows/: build.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/crates/db/: Cargo.toml
src-tauri/crates/db/src/: lib.rs
src-tauri/crates/entity/: Cargo.toml
src-tauri/crates/entity/src/: group.rs  lib.rs  message.rs  prelude.rs  user.rs  user_friend.rs  user_group.rs
src-tauri/crates/error/: Cargo.toml
src-tauri/crates/error/src/: lib.rs
src-tauri/crates/migration/: Cargo.toml
src-tauri/crates/migration/src/: lib.rs  m20250112_114132_user.rs  m20250112_115302_message.rs  m20250112_115512_user_friend.rs  m20250112_115520_group.rs  m20250112_115527_user_group.rs
src-tauri/crates/utils/: Cargo.toml
src-tauri/crates/utils/src/: email.rs  lib.rs
src-tauri/crates/websocket-server/: Cargo.toml
src-tauri/crates/websocket-server/examples/: bincode.rs
src-tauri/crates/websocket-server/src/: handle_stream.rs  lib.rs  main.rs
src-tauri/src/: lib.rs  main.rs  rtc.rs  schema.rs
src-tauri/src/crud/: contact.rs
src-tauri/src/crud/user/: auth.rs
src-tauri/src/schema/: chat.rs  user.rs
src-tauri/templates/: verify_code.html
src/lib/components/: BackButton.svelte  Toast.svelte  WebSocket.svelte
src/lib/stores/: websocket.ts
src/lib/types/: types.ts
src/routes/: +page.svelte
src/routes/admin/: +layout.ts  +page.svelte
src/routes/admin/settings/: +page.svelte
src/routes/admin/users/: +page.svelte
src/routes/chat/: +page.svelte
src/routes/register/: +page.svelte
src/routes/video/: +page.svelte
src/routes/video-chat/: +page.svelte
